2007-06-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Redesign itemization code for th_brk(), aiming at Unicode UAX #14
	compatiblity.

	* src/thbrk/Makefile.am, +src/thbrk/brk-ctype.{c,h}: Add character
	classification table, as well as operation table for breaking between
	all class combinations.

	* src/thbrk/thbrk.c (th_brk): Rewrite the itemization code, based on
	the break class table.

	* tests/test_th[w]brk.c (main): Update test values.

2007-06-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version bump.

	* data/tdict-{std,common}.txt: Add words.

2007-03-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* NEWS: Updated.

	=== Version 0.1.8 ===

2007-03-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* tests/test_thbrk.c (main), tests/test_thwbrk.c (main): Fix word
	break check values, as white space handling has now been changed.

2007-03-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Add AC_LIBTOOL_WIN32_DLL as required for Win32.

	* src/Makefile.am (libthai_la_LDFLAGS): Always pass -no-undefined to 
	enforce all resolved symbols. Thanks Loïc Minier.

2007-03-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/Makefile.am (EXTRA_DIST, libthai_la_LDFLAGS), +src/libthai.def:
	Add -export-symbols flag to limit exported symbols. Thanks Loïc Minier
	for suggestion.

	* src/thwstr/thwstr.c (th_wthaichunk): Declare the non-extern func as
	static.

2007-03-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-common.txt: Added words.

2007-02-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Yet another fix to white space bug in th_brk(), as spotted by
	Suppachoke Santiwitchaya. This is just temporary fix for use while the
	planned redesign does not happen.

	* src/thbrk/thbrk.c (th_brk): Allow break between Thai punct and white
	space.

	* src/thbrk/thbrk.c (is_breakable): Allow break between punct and