@@ -1,3 +1,10 @@
+2007-06-12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/thbrk/thbrk.c (th_brk): Don't break between CR and LF.
+	Remove last break if at string end.
+
+	* tests/test_th[w]brk.c (main): Update test values.
+
 2007-06-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	Redesign itemization code for th_brk(), aiming at Unicode UAX #14
@@ -1344,13 +1351,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.138 2007-06-11 05:13:55 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.139 2007-06-12 13:26:01 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.138 2007-06-11 05:13:55 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.139 2007-06-12 13:26:01 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
